# 2sense

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  LICENSE  README.md  config.toml  pyproject.toml
.claude/agents/: ad-eyes.md
.claude/skills/ad-learnings/: SKILL.md
src/eyesears/: __init__.py  audio_features.py  cli.py  config.py  doctor.py  ingest.py  mcp_server.py  media.py  prep.py  yamnet.py
